SFDC_LD_Packages/CPQ/main/default/objects/PricebookEntry/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Currency ISO Code child price book represents</description>
    <inlineHelpText>Currency ISO Code child price book represents</inlineHelpText>
    <label>Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>