SFDC_LD_Packages/CPQ/main/default/objects/PricebookEntry/fields/Dates_Editable__c.field-meta.xml
<CustomField>
    <fullName>Dates_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the start and end dates can be manually adjusted</description>
    <inlineHelpText>Determines if the start and end dates can be manually adjusted</inlineHelpText>
    <label>Dates Editable</label>
    <type>Checkbox</type>
</CustomField>