SFDC_LD_Packages/CPQ/main/default/objects/PricebookEntry/fields/Discountable__c.field-meta.xml
<CustomField>
    <fullName>Discountable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the quoted price can be manually adjusted away from the list price</description>
    <inlineHelpText>Determines if the quoted price can be manually adjusted away from the list price</inlineHelpText>
    <label>Discountable</label>
    <type>Checkbox</type>
</CustomField>