SFDC_LD_Packages/CPQ/main/default/objects/PricebookEntry/fields/List_Price_Editable__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the list price can be manually adjusted away from the default list price</description>
    <inlineHelpText>Determines if the list price can be manually adjusted away from the default list price</inlineHelpText>
    <label>List Price Editable</label>
    <type>Checkbox</type>
</CustomField>