SFDC_LD_Packages/CPQ/main/default/objects/PricebookEntry/fields/Manually_Addible__c.field-meta.xml
<CustomField>
    <fullName>Manually_Addible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the product can be manually added</description>
    <inlineHelpText>Determines if the product can be manually added</inlineHelpText>
    <label>Manually Addible</label>
    <type>Checkbox</type>
</CustomField>