SFDC_LD_Packages/CPQ/main/default/objects/PricebookEntry/fields/Pricing_Set_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Set_Identifier__c</fullName>
    <description>Identifier of Pricing Set on Pricebook that this entry uses to determine price.</description>
    <inlineHelpText>Identifier of Pricing Set on Pricebook that this entry uses to determine price. If empty, the list price of the entry will be used until overwritten by a rule in CPQ.</inlineHelpText>
    <label>Pricing Set Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>