SFDC_LD_Packages/CPQ/main/default/objects/PricebookEntry/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Default quantity when first added to quote</description>
    <inlineHelpText>Default quantity when first added to quote</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>