SFDC_LD_Packages/CPQ/main/default/objects/PricebookEntry/fields/Quantity_Editable__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the quantity can be manually adjusted away from the default quantity</description>
    <inlineHelpText>Determines if the quantity can be manually adjusted away from the default quantity</inlineHelpText>
    <label>Quantity Editable</label>
    <type>Checkbox</type>
</CustomField>