SFDC_LD_Packages/CPQ/main/default/objects/PricebookEntry/fields/Removable__c.field-meta.xml
<CustomField>
    <fullName>Removable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the product can be manually removed</description>
    <inlineHelpText>Determines if the product can be manually removed</inlineHelpText>
    <label>Removable</label>
    <type>Checkbox</type>
</CustomField>